--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-mdl": "^1.11.0",
+    "react-modal": "^3.11.2",
+    "react-modal-bootstrap": "^1.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
